objects/tspa__Observer_Details__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Invite_Name__c</fullName>
        <label>Invite Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__IsAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Observer_Name__c</fullName>
        <label>Observer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Observer__c</fullName>
        <label>Observer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Observer_link__c</fullName>
        <label>Observer link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tspa__Observer_type__c</fullName>
        <label>Observer type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Ended__c</fullName>
        <label>Session Ended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Invite__c</fullName>
        <label>Session Invite</label>
        <referenceTo>tspa__TechSeeSessions__c</referenceTo>
        <relationshipName>Observer_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visual Remote Assistant-Observer Details</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <columns>NAME</columns>
        <columns>tspa__Invite_Name__c</columns>
        <columns>tspa__IsClosed__c</columns>
        <columns>tspa__Observer__c</columns>
        <columns>tspa__Session_Id__c</columns>
        <columns>tspa__Observer_type__c</columns>
        <columns>tspa__Observer_link__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Observer-{0000}</displayFormat>
        <label>Observer Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observer Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>